--- a/public/rock.html
+++ b/public/rock.html
@@ -5,41 +5,60 @@
 
   <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
   <meta charset="utf-8">
+
+  <link rel="stylesheet" href="my_styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div>
-    <a href="/rock">
-      Play Rock
-    </a>
+  <div class="container">
+    <div class="row mb">
+      <div class="one-third">
+        <a class="button" href="/rock">
+          Play Rock
+        </a>
+      </div>
+
+      <div class="one-third mb">
+        <a class="button" href="/paper">
+          Play Paper
+        </a>
+      </div>
+
+      <div class="one-third mb">
+        <a class="button" href="/scissors">
+          Play Scissors
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="player-card centered">
+        <h2>
+          We played rock!
+        </h2>
+      </div>
+      <div class="computer-card centered">
+        <h2>
+          They played paper!
+        </h2>
+      </div>
+    </div>
+    <div class="row-center mb">
+      <div class="outcome-card centered">
+        <h2>
+          We lost!
+        </h2>
+      </div>
+    </div>
+
+
+
+
+      <div class="row-center mb">
+        <a href="/">
+          Rules
+        </a>
+    </div>
   </div>
-
-  <div>
-    <a href="/paper">
-      Play Paper
-    </a>
-  </div>
-
-  <div>
-    <a href="/scissors">
-      Play Scissors
-    </a>
-  </div>
-
-  <h2>
-    We played rock!
-  </h2>
-
-  <h2>
-    They played paper!
-  </h2>
-
-  <h2>
-    We lost!
-  </h2>
-
-  <a href="/">
-    Rules
-  </a>
 </body>
 </html>
